# developer-tools-app

./: package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: compress_image.rs  image.rs  main.rs  network.rs
src/layout/: index.tsx
src/locales/: en-us.json  zh-cn.json
src/menu/: index.ts
src/pages/: compress-image.tsx  error-page.tsx  home.tsx  image.tsx  network.tsx
src/router/: index.tsx
